gen-rag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gen-rag
  labels:
    app: gen-rag
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: gen-rag
